--- a/hieradata/cluster/comcam-ccs.yaml
+++ b/hieradata/cluster/comcam-ccs.yaml
@@ -67,6 +67,8 @@ ccs_monit::alert:
   ## comcam-alerts
   - "x7z0x9c0t2k4r1n1@lsstc.slack.com"
 
+ccs_mrtg::loss_host: "comcam-mcm"
+
 java_artisanal::package: "jdk1.8"
 java_artisanal::dir: "jdk1.8.0_202-amd64"
 java_artisanal::set_alternatives: false
