(common) disable pquota by default
This will only apply to the rke, rke2server, and rke2agent roles which
include profile::core::kernel::quota.  Once this flag has been removed
from cmdline on all nodes, this commit may be reverted and the ::pquota
profile removed from the listed roles.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -572,3 +572,5 @@ rke2::config:
   disable:
     - "rke2-ingress-nginx"
   disable-cloud-controller: true
+
+profile::core::kernel::pquota::ensure: "absent"  # temporary until profile::core::kernel::pquota profile is removed from roles which don't need it
