--- a/hieradata/site/cp/role/ccs-mcm.yaml
+++ b/hieradata/site/cp/role/ccs-mcm.yaml
@@ -2,3 +2,20 @@
 ccs_software::services:
   prod:
     - "kafka-broker"
+
+ccs_software::kafka_files:
+  data-int:
+    bootstrap_url: "sasquatch-int-kafka-bootstrap.lsst.cloud:9094"
+    registry_url: "https://data-int.lsst.cloud/schema-registry"
+  summit:
+    bootstrap_url: "sasquatch-summit-kafka-bootstrap.lsst.codes:9094"
+    registry_url: "https://summit-lsp.lsst.codes/schema-registry"
+
+## These are set in the private hiera.
+ccs_software::kafka_auths:
+  data-int:
+    - "%{alias('ccs_software::kafka_auths::data-int::user')}"
+    - "%{alias('ccs_software::kafka_auths::data-int::pass')}"
+  summit:
+    - "%{alias('ccs_software::kafka_auths::summit::user')}"
+    - "%{alias('ccs_software::kafka_auths::summit::pass')}"
