--- a/hieradata/cluster/elqui/role/rke2agent.yaml
+++ b/hieradata/cluster/elqui/role/rke2agent.yaml
@@ -1,5 +1,6 @@
 ---
 classes:
+  - "profile::core::sysctl::lhn"
   - "profile::core::sysctl::rp_filter"
 profile::core::sysctl::rp_filter::enable: false
 rke2::config:
