(role/ccs-dc) add hosts entry for SLAC s3

--- a/hieradata/role/ccs-dc.yaml
+++ b/hieradata/role/ccs-dc.yaml
@@ -10,3 +10,7 @@ classes:
   - "profile::core::sysctl::lhn"
 
 profile::ccs::common::sysctls: false
+
+hosts::entries:
+  sdfembs3.sdf.slac.stanford.edu:
+    ip: "172.24.7.249"
