--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,8 @@ inherit_gem:
 require:
   - rubocop-rspec
   - rubocop-rake
+AllCops:
+  TargetRubyVersion: '3.2'
 Layout/DotPosition:
   EnforcedStyle: leading
 Style/CommentedKeyword:
