(role/ccs-dc) add s3daemon instances

--- a/hieradata/role/ccs-dc.yaml
+++ b/hieradata/role/ccs-dc.yaml
@@ -8,6 +8,7 @@ classes:
   - "profile::core::debugutils"
   - "profile::core::nfsclient"
   - "profile::core::sysctl::lhn"
+  - "s3daemon"
 
 profile::ccs::common::sysctls: false
 
