(site/ls/role/ccs-dc) add s3daemon elqui instance
The eqlui instance is for testing and is temporary.

--- a/hieradata/site/ls/role/ccs-dc.yaml
+++ b/hieradata/site/ls/role/ccs-dc.yaml
@@ -14,3 +14,8 @@ files:
 ccs_software::services:
   prod:
     - {name: "image-handling", user: "ccs-ipa", group: "ccs-ipa", workdir: "/home/ccs-ipa"}
+
+s3daemon::instances:
+  elqui:  # testing
+    s3_endpoint_url: "https://s3.elqui.cp.lsst.org"
+    port: 15558
