--- a/spec/fixtures/hiera.yaml
+++ b/spec/fixtures/hiera.yaml
@@ -6,8 +6,41 @@ hierarchy:
   - name: "private hiera"
     datadir: "./hieradata"
     paths:
-      - "role-only.yaml"
+      - "node/%{fqdn}.yaml"
+      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}.yaml"
+      - "site/%{site}/cluster/%{cluster}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "site/%{site}/cluster/%{cluster}/variant/%{variant}.yaml"
+      - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "site/%{site}/cluster/%{cluster}/role/%{role}/osfamily.yaml"
+      - "site/%{site}/cluster/%{cluster}/role/%{role}.yaml"
+      - "site/%{site}/cluster/%{cluster}.yaml"
+      - "cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "cluster/%{cluster}/variant/%{variant}/subvariant/%{subvariant}.yaml"
+      - "cluster/%{cluster}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "cluster/%{cluster}/variant/%{variant}.yaml"
+      - "cluster/%{cluster}/role/%{role}.yaml"
+      - "cluster/%{cluster}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "cluster/%{cluster}/osfamily/%{facts.os.family}.yaml"
+      - "cluster/%{cluster}.yaml"
+      - "site/%{site}/variant/%{variant}/subvariant/%{subvariant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "site/%{site}/variant/%{variant}/subvariant/%{subvariant}.yaml"
+      - "site/%{site}/variant/%{variant}/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "site/%{site}/variant/%{variant}.yaml"
+      - "site/%{site}/role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "site/%{site}/role/%{role}/osfamily/%{facts.os.family}.yaml"
+      - "site/%{site}/role/%{role}.yaml"
+      - "site/%{site}.yaml"
+      - "role/%{role}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "role/%{role}/osfamily/%{facts.os.family}.yaml"
+      - "role/%{role}.yaml"
+      - "common/architecture/%{facts.os.architecture}/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "common/architecture/%{facts.os.architecture}/osfamily/%{facts.os.family}.yaml"
+      - "common/osfamily/%{facts.os.family}/major/%{facts.os.release.major}.yaml"
+      - "common/osfamily/%{facts.os.family}.yaml"
+      - "common/virtual/%{virtual}.yaml"
       - "common.yaml"
+      - "role-only.yaml"
   - name: "public hiera"
     datadir: "../../hieradata"
     paths:
