(TESTING) add s3daemon to generic role

--- a/hieradata/role/generic.yaml
+++ b/hieradata/role/generic.yaml
@@ -3,3 +3,4 @@
 # can be used to bootstrap nodes while a more specific role is being developed.
 classes:
   - "profile::core::common"
+  - "s3daemon"
