--- a/hieradata/node/lsstcam-archiver.cp.lsst.org.yaml
+++ b/hieradata/node/lsstcam-archiver.cp.lsst.org.yaml
@@ -1,4 +1,10 @@
 ---
+nfs::client_mounts:
+  /data:
+    share: "lsstcam"
+    server: "nfs3.cp.lsst.org"
+    atboot: true
+
 profile::core::k5login::k5login:
   "/home/saluser/.k5login":
     ensure: "present"
