--- a/hieradata/node/nfs3.cp.lsst.org.yaml
+++ b/hieradata/node/nfs3.cp.lsst.org.yaml
@@ -11,6 +11,7 @@ nfs::nfs_exports_global:
       139.229.160.0/24(rw,nohide,insecure,no_subtree_check,async,root_squash)
       139.229.165.0/24(rw,nohide,insecure,no_subtree_check,async,root_squash)
       azar03.cp.lsst.org(rw,nohide,insecure,no_subtree_check,async,root_squash)
+      comcam-archiver.cp.lsst.org(rw,nohide,insecure,no_subtree_check,async,no_root_squash)
   /lsstcam:
     clients: >-
       %{facts.networking.ip}/32(ro,nohide,insecure,no_subtree_check,async,root_squash)
