(role/rke2{agent,server}) update backup dirs to include rke2 tls certs

--- a/hieradata/role/rke2agent.yaml
+++ b/hieradata/role/rke2agent.yaml
@@ -17,9 +17,12 @@ restic::repositories:
     backup_path:
       - "/etc/cni"
       - "/etc/rancher"
-      - "/var/lib/rancher/rke2/agent"
+      - "/var/lib/rancher/rke2"
       - "/var/lib/rook"
-    backup_flags: "--exclude=/var/lib/rook/rook-ceph/log"
+    backup_flags:
+      - "--exclude=/var/lib/rancher/rke2/agent/containerd"
+      - "--exclude=/var/lib/rancher/rke2/agent/logs"
+      - "--exclude=/var/lib/rook/rook-ceph/log"
     backup_timer: "*-*-* 09:00:00"
     enable_forget: true
     forget_timer: "Mon..Sun 23:00:00"
