(node/auxtel-hcu01.cp.lsst.org) add el9 network and tests

--- a/hieradata/node/auxtel-hcu01.cp.lsst.org.yaml
+++ b/hieradata/node/auxtel-hcu01.cp.lsst.org.yaml
@@ -1,21 +1,55 @@
 ---
-network::interfaces_hash:
-  eno1:  # fqdn
-    bootproto: "dhcp"
-    defroute: "yes"
-    onboot: "yes"
-    type: "Ethernet"
-  enp6s0:  # 192.168.1.0/24
-    bootproto: "none"
-    ipaddress: "192.168.1.1"
-    netmask: "255.255.255.0"
-    onboot: "yes"
-    type: "Ethernet"
-  enp7s0:  # not connected
-    bootproto: "none"
-    onboot: "no"
-    type: "Ethernet"
-  enp8s0:  # not connected / was connected to a PDU
-    bootproto: "none"
-    onboot: "no"
-    type: "Ethernet"
+nm::connections:
+  eno1:  #fqdn
+    content:
+      connection:
+        id: "eno1"
+        uuid: "03da7500-2101-c722-2438-d0d006c28c73"
+        type: "ethernet"
+        interface-name: "eno1"
+      ethernet: {}
+      ipv4:
+        method: "auto"
+      ipv6:
+        method: "disabled"
+      proxy: {}
+  enp6s0:
+    content:
+      connection:
+        id: "enp6s0"
+        uuid: "edb4ebb1-6d05-427b-b6ea-d483bdf32ec7"
+        type: "ethernet"
+        interface-name: "enp6s0"
+      ethernet: {}
+      ipv4:
+        method: "manual"
+        address1: "192.168.1.1/24"
+      ipv6:
+        method: "disabled"
+      proxy: {}
+  enp7s0:
+    content:
+      connection:
+        id: "enp7s0"
+        uuid: "df30450e-88e5-40c5-bdc8-0edf49cd7e3e"
+        type: "ethernet"
+        autoconnect: "false"
+        interface-name: "enp7s0"
+      ethernet: {}
+      ipv4:
+        method: "disabled"
+      ipv6:
+        method: "disabled"
+  enp8s0:
+    content:
+      connection:
+        id: "enp8s0"
+        uuid: "2b8abfcc-69f9-4f13-887e-8dc2a45b3cc8"
+        type: "ethernet"
+        autoconnect: "false"
+        interface-name: "enp8s0"
+      ethernet: {}
+      ipv4:
+        method: "disabled"
+      ipv6:
+        method: "disabled"
