--- a/hieradata/cluster/yagan/variant/1114s/subvariant/1.02.yaml
+++ b/hieradata/cluster/yagan/variant/1114s/subvariant/1.02.yaml
@@ -68,6 +68,21 @@ nm::connections:
         id: "1201"
         parent: "enp197s0f1"
       bridge-port: {}
+  enp197s0f1.1702:
+    content:
+      connection:
+        id: "enp197s0f1.1702"
+        uuid: "e0033d5e-6965-4b96-8d06-45957b4f92f0"
+        type: "vlan"
+        interface-name: "enp197s0f1.1702"
+        master: "br1702"
+        slave-type: "bridge"
+      ethernet: {}
+      vlan:
+        flags: "1"
+        id: "1702"
+        parent: "enp197s0f1"
+      bridge-port: {}
   enp197s0f1.1800:
     content:
       connection:
