--- a/hieradata/site/ls.yaml
+++ b/hieradata/site/ls.yaml
@@ -63,3 +63,5 @@ ccs_sal::lfa:
   secret: "%{alias('ccs_sal::lfa::secret')}"
   endpoint: "https://s3.ls.lsst.org/"
   bucket: "rubinobs-lfa-ls"
+
+ccs_software::influx_url: "https://ccs-influxdb.ls.lsst.org:443"
