(site/{ls,tu}/{auxtel|comcam|lsstcam}-ccs) alerts to Rubin Slack
It didn't make sense to leave them in LSSTC Slack.
Almost no-one is subscribed to these channels anyway.

--- a/hieradata/site/ls/cluster/lsstcam-ccs.yaml
+++ b/hieradata/site/ls/cluster/lsstcam-ccs.yaml
@@ -3,7 +3,7 @@ ccs_site: "base"
 ccs_sal::dds_interface: "lsstcam-mcm-dds.ls.lsst.org"
 
 ## base-teststand-alerts
-ccs_software::service_email: "base-teststand-alerts-aaaai5j4osevcaaobtog67nxlq@lsstc.slack.com"
+ccs_software::service_email: "base-teststand-alerts-aaaaojwlqmczgqmavrwyopux5a@rubin-obs.slack.com"
 
 ccs_monit::alert:
-  - "base-teststand-alerts-aaaai5j4osevcaaobtog67nxlq@lsstc.slack.com"
+  - "base-teststand-alerts-aaaaojwlqmczgqmavrwyopux5a@rubin-obs.slack.com"
