--- a/hieradata/cluster/auxtel-ccs.yaml
+++ b/hieradata/cluster/auxtel-ccs.yaml
@@ -30,7 +30,7 @@ ccs_software::service_email: "auxtel-ccs-alerts-aaaaoikgy7stloxmg54kii7uwi@rubin
 
 clustershell::groupmembers:
   misc: {group: "misc", member: "auxtel-mcm,auxtel-dc01,auxtel-fp01"}
-  hcu: {group: "hcu", member: "auxtel-hcu01,auxtel-hcu02"}
+  hcu: {group: "hcu", member: "auxtel-hcu01"}
   all: {group: "all", member: "@misc,@hcu"}
 
 ccs_monit::alert:
