(*) changed the priority variable from a String to an integer

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -196,7 +196,7 @@ sudo::configs:
   wheel_b:  # backup wheel group in case of LDAP failure.
     content: "%wheel_b ALL=(ALL) NOPASSWD: ALL"
   defaults:
-    priority: "00"
+    priority: 00
     content: |
       Defaults   !visiblepw
       Defaults    always_set_home
