(node/auxtel-mcm.cp, site/cp/role/ccs-mcm) fix kafka service name

--- a/hieradata/node/auxtel-mcm.cp.lsst.org.yaml
+++ b/hieradata/node/auxtel-mcm.cp.lsst.org.yaml
@@ -63,7 +63,7 @@ ccs_software::services:
   prod:
     - "mmm"
     - "cluster-monitor"
-    - "kafka-broker"
+    - "kafka-broker-service"
     - "localdb"
     - "lockmanager"
     - "rest-server"
