--- a/hieradata/site/cp/role/ccs-mcm.yaml
+++ b/hieradata/site/cp/role/ccs-mcm.yaml
@@ -1,7 +1,7 @@
 ---
 ccs_software::services:
   prod:
-    - "kafka-broker"
+    - "kafka-broker-service"
 
 ccs_software::kafka_files:
   data-int:
